
Version 5.0.5 (unreleased)
==========================

User changes
------------

- GUI: enable "separate meshes" writer option (already available
  through user functions) through the GUI. This option allows for
  separate sub-writers being used for each associated mesh (avoiding
  the frequent need for the "Separate Blocks" operation in ParaView).

Bug fixes
---------

- Fix link with user functions for movable builds linking directly with
  Catalyst (e.g. Salome_CFD).

- GUI: fix handling of exchange coefficient boundary conditions.

- Fix automatic installer crash due to malformed string format.

- Fix in radiative FSCK model.

- Fix "code_saturne submit" whith mesh import only mode.

- Fix issue #243 (error in balance by zone the kinematic outlet term).

- Fix for EBRSM with irijco=1 and floatation terms.

- Fix launch of convergence tracking graphical tool when using Qt5.

- Fix issue #239 relative to cooling tower module run in parallel.

- When importing CGNS files and requiring additional groups for mesh
  sections or zones, do not try to build boundary face groups based
  on vertex boundary conditions; fixes crash in this combination.

- Salome_CFD:
  * fix build for some system combinations.
  * symbolic link files bug fixed.
  * setup.py save File action bug fixed.

Release 5.0.4 (Aug 24 2017)
===========================

Bug fixes
---------

- Several fixes in CFD_STUDY Salome module's interactive behavior.

- Fix broken path in update feature of studymanager.

- Fix possible crash or error when computing wall distance for 2D
  (single cell layer) meshes.

- Fix bug in the implicit part of the user momentum source terms when
  this matrix is not symmetric.

- Fix bug in rough wall function (when iwallf != 2 and when using DRSM
  turbulence models)

- Avoid logging info for an extra boundary zone for radiation module.

- Fix crash in matrix assembler (used by CDO) in rare cases where some
  ranks are associated with no locla matrix rows.
