@@ -13,6 +13,8 @@ User changes
 Bug fixes
 ---------
 
+- Salome_CFD: fix launch for user builds where CS_ROOT_DIR is not defined.
+
 - Fix link with user functions for movable builds linking directly with
   Catalyst (e.g. Salome_CFD).
 
